--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="textColor">#53E88B</color>
-    <color name="starColor">#53E88C</color>
-    <color name="endColor">#53E88F</color>
+    <color name="textColor">#1FC57A</color>
+    <color name="starColor">#53E88B</color>
+    <color name="endColor">#15BE77</color>
 </resources>
