--- a/app/src/main/res/layout/item_item.xml
+++ b/app/src/main/res/layout/item_item.xml
@@ -100,7 +100,7 @@
                 app:layout_constraintTop_toTopOf="@+id/plusButton" />
 
             <ImageButton
-                android:id="@+id/imageButton3"
+                android:id="@+id/deleteButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
