--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -227,6 +227,7 @@
         app:layout_constraintStart_toEndOf="@+id/cardView2"
         app:layout_constraintTop_toTopOf="@+id/cardView2">
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/allItemMenu"
             android:layout_width="match_parent"
             android:background="@drawable/greencard"
             android:layout_height="match_parent">>
@@ -340,6 +341,7 @@
         app:layout_constraintStart_toStartOf="@+id/cardView3"
         app:layout_constraintTop_toBottomOf="@+id/cardView3">
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/outForDeliveryButton"
             android:layout_width="match_parent"
             android:background="@drawable/greencard"
             android:layout_height="match_parent">>
