--- a/app/src/main/res/layout/activity_all_item.xml
+++ b/app/src/main/res/layout/activity_all_item.xml
@@ -10,11 +10,11 @@
 
     <ImageButton
         android:id="@+id/backButton"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:scaleType="center"
+        android:scaleType="centerCrop"
         android:src="@drawable/arrow_left"
         android:background="@android:color/transparent"
         app:layout_constraintStart_toStartOf="parent"
