--- a/app/src/main/res/layout/activity_out_for_activity.xml
+++ b/app/src/main/res/layout/activity_out_for_activity.xml
@@ -9,13 +9,13 @@
 
     <ImageButton
         android:id="@+id/backButton"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
+        android:layout_width="35dp"
+        android:layout_height="35dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:scaleType="center"
-        android:src="@drawable/arrow_left"
         android:background="@android:color/transparent"
+        android:scaleType="centerCrop"
+        android:src="@drawable/arrow_left"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
