--- a/app/src/main/res/layout/item_item.xml
+++ b/app/src/main/res/layout/item_item.xml
@@ -49,7 +49,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:fontFamily="@font/lato_bold"
-                android:text="Spicy Fresh Crab"
+                android:text="Spicy Fresh"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintStart_toEndOf="@+id/cardView8"
