--- a/app/src/main/res/layout/delivery_item.xml
+++ b/app/src/main/res/layout/delivery_item.xml
@@ -28,7 +28,7 @@
                 android:id="@+id/customerName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Customer Name"
+                android:text="Dummy Customer Name"
                 android:fontFamily="@font/lato_bold"
                 android:textSize="16sp"
                 android:layout_marginStart="16dp"
