--- a/app/src/main/res/layout/delivery_item.xml
+++ b/app/src/main/res/layout/delivery_item.xml
@@ -28,11 +28,11 @@
                 android:id="@+id/customerName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Dummy Customer Name"
-                android:fontFamily="@font/lato_bold"
-                android:textSize="16sp"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="8dp"
+                android:fontFamily="@font/lato_bold"
+                android:text="Customer Name"
+                android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
