--- a/app/src/main/res/layout/delivery_item.xml
+++ b/app/src/main/res/layout/delivery_item.xml
@@ -41,7 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/lato_regular"
-                android:text="Payment"
+                android:text="Payments"
                 android:textColor="#B3B3B3"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@+id/customerName"
